<resources>
    <string name="app_name">Trophy Admin</string>
    <string name="google_maps_key">AIzaSyCz0GPyWuKVDQllNXhK9Middu08KXA8ghY</string>

    <string name="no_network">Not network connection !</string>
    <string name="add_event">Add Event</string>
    <string name="view_events">View Events</string>
    <string name="event">Event</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="sport">Sport</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="once_week">Once a week</string>
    <string name="start_at">Start At</string>
    <string name="deadline">Deadline</string>
    <string name="add_location_hint">Tab here to add address</string>
    <string name="add_time_hint">Tab here to add time</string>
    <string name="select_day_hint">Tab here to select day</string>
    <string name="select_location">Select Location</string>
    <string name="events">Events</string>
    <string name="add_player">Add Player</string>
    <string name="players">Players</string>
    <string name="player">Player</string>
    <string name="user">User</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="birth">Birthday</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="update_ranking">Update Ranking</string>
    <string name="update_user">Update User</string>
    <string name="follow">Followers</string>
    <string name="ranking">Ranking</string>
    <string name="not_ranking">Not Ranking</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="diamond">Diamond</string>
    <string name="remove_player">Remove Player</string>
    <string name="win">Wins</string>
    <string name="local_sport">Compit</string>
    <string name="user_join_requests">User Join Requests</string>
    <string name="approve">Approve</string>
    <string name="cancel">Cancel</string>
    <string name="remove_event">Remove Event</string>
</resources>