<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/ic_close"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:tint="@color/black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="15dp">
            <RadioButton
                android:id="@+id/bronze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_regular"
                android:text="@string/bronze"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bronze"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="12dp">
            <RadioButton
                android:id="@+id/silver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_regular"
                android:text="@string/silver"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/silver"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="12dp">
            <RadioButton
                android:id="@+id/gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_regular"
                android:text="@string/gold"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/gold"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="12dp">
            <RadioButton
                android:id="@+id/platinum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_regular"
                android:text="@string/platinum"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/platinum"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="12dp">
            <RadioButton
                android:id="@+id/diamond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_regular"
                android:text="@string/diamond"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/diamond"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/round_primary_background">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update"
                android:adjustViewBounds="true"
                android:layout_marginRight="7dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_regular"
                android:text="@string/update_ranking"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>