<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/menu"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_sport"
            android:layout_marginRight="7dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/local_sport"
            android:textSize="17sp"
            android:fontFamily="@font/custom_bold"
            android:textStyle="italic"
            android:textColor="@color/white"/>
        <FrameLayout
            android:id="@+id/request_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_notification"/>
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/request_num"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:nbMaxTextLength="2"
                android:layout_gravity="top|end"
                android:layout_marginLeft="17dp"/>
        </FrameLayout>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_person_group"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/add_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_primary_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:adjustViewBounds="true"
                        app:tint="@android:color/white"
                        android:layout_marginRight="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_event"
                        android:textColor="@color/white"
                        android:fontFamily="@font/custom_regular"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:singleLine="true"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/all_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_primary_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye"
                        android:adjustViewBounds="true"
                        app:tint="@android:color/white"
                        android:layout_marginRight="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_events"
                        android:fontFamily="@font/custom_regular"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:singleLine="true"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/join_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_primary_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_join"
                        android:adjustViewBounds="true"
                        app:tint="@android:color/white"
                        android:layout_marginRight="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_join_requests"
                        android:fontFamily="@font/custom_regular"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:singleLine="true"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>