<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Bottom.Plain"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_back"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/title_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="6dp"
                android:fontFamily="@font/custom_regular"
                android:textColor="@color/white"
                android:text="@string/event"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="13sp"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="7dp">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:orientation="vertical">
                        <fragment
                            android:id="@+id/map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            class="com.google.android.gms.maps.SupportMapFragment" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="bottom"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="#A881c9bb">
                            <TextView
                                android:id="@+id/day_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                android:padding="5dp"/>
                            <TextView
                                android:id="@+id/deadline_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="12sp"
                                android:textColor="@color/black"
                                android:padding="5dp"/>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="7dp">
                    <LinearLayout
                        android:id="@+id/player_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="7dp"
                        android:background="@drawable/round_gray_bottom_border"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/custom_regular"
                            android:textSize="13sp"
                            android:textColor="@color/gray1"
                            android:text="@string/players"
                            android:padding="3dp"
                            android:singleLine="true"/>
                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp">
                            <LinearLayout
                                android:id="@+id/player_list"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center_vertical"/>
                        </HorizontalScrollView>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/custom_regular"
                        android:textSize="13sp"
                        android:textColor="@color/gray1"
                        android:text="@string/address"
                        android:padding="3dp"
                        android:singleLine="true"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom"
                        android:background="@drawable/round_gray_bottom_border">
                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/custom_regular"
                            android:textColor="@color/black"
                            android:drawableLeft="@drawable/ic_location"
                            android:drawableTint="@color/gray1"
                            android:drawablePadding="5dp"
                            android:textSize="13sp"
                            android:padding="8dp"
                            android:background="@null"
                            android:singleLine="true"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/custom_regular"
                        android:textSize="13sp"
                        android:textColor="@color/gray1"
                        android:text="@string/sport"
                        android:padding="3dp"
                        android:singleLine="true"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/round_gray_bottom_border">
                        <ImageView
                            android:id="@+id/sport_icon"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            app:tint="@color/gray1"
                            android:adjustViewBounds="true"
                            android:layout_marginLeft="8dp"/>
                        <TextView
                            android:id="@+id/sport"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/custom_regular"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:padding="8dp"
                            android:background="@null"
                            android:singleLine="true"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/custom_regular"
                        android:textSize="13sp"
                        android:textColor="@color/gray1"
                        android:text="@string/price"
                        android:padding="3dp"
                        android:singleLine="true"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom"
                        android:background="@drawable/round_gray_bottom_border">
                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/custom_regular"
                            android:textColor="@color/black"
                            android:drawableLeft="@drawable/ic_money"
                            android:drawableTint="@color/gray1"
                            android:drawablePadding="5dp"
                            android:textSize="13sp"
                            android:padding="8dp"
                            android:background="@null"
                            android:singleLine="true"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/add_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_primary_background">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:adjustViewBounds="true"
                android:layout_marginRight="7dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_regular"
                android:text="@string/add_player"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/remove_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_primary_background">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:adjustViewBounds="true"
                android:layout_marginRight="7dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_regular"
                android:text="@string/remove_event"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>